# om

./: .gitignore  BLOG.md  CLAUDE.md  LICENSE  Makefile  QUICKSTART.md  README.md  THESIS.md  marketplace.json  pyproject.toml  setup.sh
.claude/: roadmap.md  structure.md
marketplace/: README.md
marketplace/.claude-plugin/: marketplace.json
marketplace/plugins/darshana/.claude-plugin/: plugin.json
marketplace/plugins/darshana/hooks/: hooks.json
reports/: darshana-single-report.html  introspection-report.html  shakti-budget-report.html  yaksha-multi-report.html
src/: __init__.py  __main__.py  ahamkara.py  darshana_llm.py  demo_ahamkara.py  demo_reports.py  demo_yaksha.py  prompts.py  reports.py  yaksha.py
tests/: benchmark.py  benchmark_filter.py  test_filter.py  test_router.py
training/: README.md  config_kimi.yaml  finetune_kimi.py  requirements.txt  serve_kimi.py  setup_kimi.sh
