[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darshana"
version = "0.1.0"
description = "The Darshana Architecture — Hindu philosophical reasoning framework for AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Harshwardhan (HNG)" },
]
keywords = [
    "philosophy",
    "reasoning",
    "ai",
    "darshana",
    "hindu-philosophy",
    "cognitive-architecture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
darshana = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/aidgoc/om"

[tool.setuptools.packages.find]
include = ["src*"]
